--- a/gestion_utilisateurs.html
+++ b/gestion_utilisateurs.html
@@ -41,9 +41,6 @@
             <label for="newPrenom">Prénom:</label>
             <input type="text" id="newPrenom" name="newPrenom" required><br>
 
-            <label for="newFonction">Fonction:</label>
-            <input type="text" id="newFonction" name="newFonction" required><br>
-
             <button type="submit">Ajouter un utilisateur</button>
             <div id="message"></div>
             <div id="error"></div>
@@ -57,20 +54,25 @@
     <script>
         async function checkUserAccess() {
             const loggedInUsername = localStorage.getItem('username');
-            const authorizedUsers = ['administrateur', 'superadmin', 'gregory.houy']; // Liste des utilisateurs autorisés (À MODIFIER)
+            const authorizedUsers = ['administrateur', 'salome.boudeau', 'gregory.houy']; // Liste des utilisateurs autorisés (À MODIFIER)
+            const gestionUtilisateursPage = 'gestion_utilisateurs.html'; // Nom de la page actuelle
 
             if (!loggedInUsername) {
+                // Si aucun utilisateur n'est connecté, rediriger vers la page de connexion
                 alert("Vous devez être connecté pour accéder à cette page.");
                 window.location.href = 'index.html';
-                return false;
+                return false; // Indiquer que l'accès est refusé
             }
 
             if (!authorizedUsers.includes(loggedInUsername)) {
-                alert(`L'utilisateur "${loggedInUsername}" n'a pas l'autorisation d'accéder à la gestion des utilisateurs.`);
+                // Si l'utilisateur connecté n'est pas autorisé, afficher un message et rediriger
+                alert(`L'utilisateur "${loggedInUsername}" n'a pas l'autorisation d'accéder à la gestion des utilisateurs. Redirection en cours...`);
                 window.location.href = 'page_accueil.html';
-                return false;
+                return false; // Indiquer que l'accès est refusé
             }
 
+            // Si l'utilisateur est connecté et autorisé, retourner true pour continuer le chargement de la page
+            console.log(`L'utilisateur "${loggedInUsername}" est autorisé à accéder à la gestion des utilisateurs.`);
             return true;
         }
 
@@ -83,7 +85,7 @@
                     const users = await response.json();
                     users.forEach(user => {
                         const listItem = document.createElement('li');
-                        listItem.textContent = `${user.username} (${user.prenom}), Fonction: ${user.fonction}`;
+                        listItem.textContent = `${user.username} (${user.prenom})`;
                         const deleteButton = document.createElement('button');
                         deleteButton.textContent = 'Supprimer';
                         deleteButton.onclick = () => deleteUser(user.username);
@@ -106,10 +108,9 @@
             event.preventDefault();
             const newUsername = document.getElementById('newUsername').value;
             const newPassword = document.getElementById('newPassword').value;
-            const newPrenom = document.getElementById('newPrenom').value;
-            const newFonction = document.getElementById('newFonction').value;
+            const newPrenom = document.getElementById('newPrenom').value; // Récupérer le prénom
 
-            const newUser = { username: newUsername, password: newPassword, prenom: newPrenom, fonction: newFonction };
+            const newUser = { username: newUsername, password: newPassword, prenom: newPrenom }; // Inclure le prénom
 
             try {
                 const response = await fetch('/api/users', {
@@ -139,7 +140,7 @@
         async function deleteUser(username) {
             if (confirm(`Êtes-vous sûr de vouloir supprimer l'utilisateur "${username}" ?`)) {
                 try {
-                    const response = await fetch(`/api/users?username=${username}`, {
+                    const response = await fetch(`/api/users?username=${username}`, { // Utiliser le paramètre username pour identifier l'utilisateur à supprimer
                         method: 'DELETE',
                     });
                     const data = await response.json();
@@ -159,10 +160,11 @@
             }
         }
 
+        // Fonction principale pour gérer le chargement de la page et la vérification d'accès
         async function initializePage() {
             const accessGranted = await checkUserAccess();
             if (accessGranted) {
-                loadUsers();
+                loadUsers(); // Charger la liste des utilisateurs uniquement si l'accès est autorisé
             }
         }
 
