--- a/page_accueil.html
+++ b/page_accueil.html
@@ -3,80 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - La Maison des Lycéens</title>
+    <title>Page d'Accueil</title>
     <style>
-        body { font-family: sans-serif; margin: 20px; }
+        body { font-family: sans-serif; }
+        .container { max-width: 600px; margin: 50px auto; padding: 20px; border: 1px solid #ccc; border-radius: 5px; }
         h1 { text-align: center; }
-        h2 { margin-bottom: 5px; }
-        p { margin-top: 5px; }
-        nav ul { list-style: none; padding: 0; text-align: center; }
-        nav ul li { display: inline; margin: 0 10px; }
-        nav a { text-decoration: none; color: blue; }
-        nav a:hover { text-decoration: underline; }
-        main { display: flex; flex-direction: column; align-items: center; }
-        button { padding: 10px 15px; cursor: pointer; }
+        p { text-align: center; }
+        button { display: block; width: 200px; margin: 20px auto; padding: 10px; font-size: 16px; cursor: pointer; }
+        .new-tab-link { display: block; margin-top: 20px; text-align: center; color: blue; text-decoration: none; }
+        .new-tab-link:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
-    <header>
-        <h1>La Maison des Lycéens</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Accueil</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h2 id="welcome-message">Bonjour, [prénom de l'utilisateur]</h2>
-        <p id="user-function">Fonction : [fonction de l'utilisateur]</p>
-        <p><a href="trombinoscope/trombinoscope.html">Trombinoscope</a></p>
-        <p><a href="messaging/messaging.html">Messagerie</a></p>
+    <div class="container">
+        <h1 id="welcomeMessage">Bienvenue !</h1>
         <p><a href="gestion_utilisateurs.html">Gestion des Utilisateurs</a></p>
-        <button onclick="logout()">Déconnexion</button>
-    </main>
-    <script>
-        async function getUsername() {
-            return localStorage.getItem('username');
-        }
+        <p><a href="./inventory/inventory.html">Inventaire</a></p>
+        <p><a href="./trombinoscope/trombinoscope.html">Trombinoscope</a></p>
+        <a href="./messaging/messaging.html" class="new-tab-link" target="_blank">Messagerie Instantanée</a>
+        <button id="logoutButton">Se déconnecter</button>
+    </div>
 
+    <script>
         async function displayWelcomeMessage() {
-            const username = await getUsername();
-            const welcomeMessageElement = document.getElementById('welcome-message');
-            const userFunctionElement = document.getElementById('user-function');
+            const username = localStorage.getItem('username');
 
             if (username) {
                 try {
                     const response = await fetch(`/api/users?username=${username}`);
                     if (response.ok) {
-                        const userDetails = await response.json();
-                        if (userDetails && userDetails.prenom && userDetails.fonction) {
-                            welcomeMessageElement.textContent = `Bonjour ${userDetails.prenom}`;
-                            userFunctionElement.textContent = `Fonction : ${userDetails.fonction}`;
+                        const user = await response.json();
+                        if (user && user.prenom) {
+                            document.getElementById('welcomeMessage').textContent = `Bonjour ${user.prenom} !`;
                         } else {
-                            welcomeMessageElement.textContent = `Bonjour, utilisateur !`;
-                            userFunctionElement.textContent = `Fonction : Non définie`;
+                            document.getElementById('welcomeMessage').textContent = `Bonjour ${username} !`;
                         }
                     } else {
                         console.error("Erreur lors de la récupération des détails de l'utilisateur");
-                        welcomeMessageElement.textContent = `Bonjour, utilisateur !`;
-                        userFunctionElement.textContent = `Fonction : Non disponible`;
+                        document.getElementById('welcomeMessage').textContent = `Bonjour ${username} !`;
                     }
                 } catch (error) {
-                    console.error("Erreur de réseau:", error);
-                    welcomeMessageElement.textContent = `Bonjour, utilisateur !`;
-                    userFunctionElement.textContent = `Fonction : Erreur de chargement`;
+                    console.error("Erreur lors de la communication avec l'API:", error);
+                    document.getElementById('welcomeMessage').textContent = `Bienvenue !`;
                 }
             } else {
                 window.location.href = 'index.html'; // Rediriger si non connecté
             }
         }
 
+        document.addEventListener('DOMContentLoaded', displayWelcomeMessage);
+
+        const logoutButton = document.getElementById('logoutButton');
+        logoutButton.addEventListener('click', logout);
+
         function logout() {
             localStorage.removeItem('username');
             window.location.href = 'index.html';
         }
-
-        document.addEventListener('DOMContentLoaded', displayWelcomeMessage);
     </script>
 </body>
 </html>
