--- a/page_accueil.html
+++ b/page_accueil.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
+<html lang="fr"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page d'Accueil</title>
@@ -16,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="welcomeMessage">Bienvenue !</h1>
+        <h1 id="welcomeMessage">Bienvenue, Aurélien !</h1>
         <p><a href="gestion_utilisateurs.html">Gestion des Utilisateurs</a></p>
         <p><a href="./inventory/inventory.html">Inventaire</a></p>
         <p><a href="./trombinoscope/trombinoscope.html">Trombinoscope</a></p>
@@ -61,5 +60,5 @@
             window.location.href = 'index.html';
         }
     </script>
-</body>
-</html>
+
+</body></html>
