--- a/gestion_utilisateurs.html
+++ b/gestion_utilisateurs.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
+<html lang="fr"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestion des Utilisateurs</title>
@@ -33,13 +32,13 @@
         <h2>Ajouter un utilisateur</h2>
         <form id="addUserForm">
             <label for="newUsername">Nom d'utilisateur:</label>
-            <input type="text" id="newUsername" name="newUsername" required><br>
+            <input type="text" id="newUsername" name="newUsername" required=""><br>
 
             <label for="newPassword">Mot de passe:</label>
-            <input type="password" id="newPassword" name="newPassword" required><br>
+            <input type="password" id="newPassword" name="newPassword" required=""><br>
 
             <label for="newPrenom">Prénom:</label>
-            <input type="text" id="newPrenom" name="newPrenom" required><br>
+            <input type="text" id="newPrenom" name="newPrenom" required=""><br>
 
             <button type="submit">Ajouter un utilisateur</button>
             <div id="message"></div>
@@ -47,8 +46,7 @@
         </form>
 
         <h2>Liste des utilisateurs</h2>
-        <ul id="userList">
-        </ul>
+        <ul id="userList"><li>salome.boudeau (Salomé)<button>Supprimer</button></li><li>meline.cochin (Méline)<button>Supprimer</button></li><li>antony.taieb (Antony)<button>Supprimer</button></li><li>ewan.kervellec (Ewan)<button>Supprimer</button></li><li>aurelien.naurais (Aurélien)<button>Supprimer</button></li><li>alicia.blanluet (Alicia)<button>Supprimer</button></li><li>amaury.anfraypavy (Amaury)<button>Supprimer</button></li><li>julien.hebert (Julien)<button>Supprimer</button></li><li>anays.kervellec (Anays)<button>Supprimer</button></li><li>gregory.houy (Grégory)<button>Supprimer</button></li><li>administrateur (Administrateur)<button>Supprimer</button></li></ul>
     </div>
 
     <script>
@@ -170,5 +168,5 @@
 
         initializePage();
     </script>
-</body>
-</html>
+
+</body></html>
