--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container" id="loginContainer">
-		<img src="images/logos/mdl.png">
+		<img src="./images/logos/mdl.png">
 		<h1>Connexion</h1>
 		<hr><br>
 		<form id="loginForm" action="https://page-de-connexion-html.vercel.app/api/login" method="POST">
