Changement de aurelien par utilisateur

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="welcomeMessage">Bienvenue, Aurélien !</h1>
+        <h1 id="welcomeMessage">Bienvenue, utilisateur !</h1>
         <p><a href="gestion_utilisateurs.html">Gestion des Utilisateurs</a></p>
         <p><a href="./inventory/inventory.html">Inventaire</a></p>
         <p><a href="./trombinoscope/trombinoscope.html">Trombinoscope</a></p>
