--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<img src="./images/logos/mdl.png">
 			<img src="./images/logos/lycee.png">
 		</div>
-		<h1>Espace membre - Connexion</h1>
+		<h1>Espace membre Connexion</h1>
 		<hr><br>
 		<form id="loginForm" action="https://page-de-connexion-html.vercel.app/api/login" method="POST">
 			<div class="form-group">
