--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</div>
 			<div class="form-group">
 				<label for="password">Mot de passe :</label>
-				<input type="date" id="password" name="password" required>
+				<input type="password" id="password" name="password" required>
 			</div>
 			<button type="submit" class="btn-primary">Se connecter</button>
 			<div id="errorMessage" class="error-message"></div>
