--- a/page_accueil.html
+++ b/page_accueil.html
@@ -4,61 +4,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page d'Accueil</title>
     <style>
-        body { font-family: sans-serif; }
-        .container { max-width: 600px; margin: 50px auto; padding: 20px; border: 1px solid #ccc; border-radius: 5px; }
-        h1 { text-align: center; }
-        p { text-align: center; }
-        button { display: block; width: 200px; margin: 20px auto; padding: 10px; font-size: 16px; cursor: pointer; }
-        .new-tab-link { display: block; margin-top: 20px; text-align: center; color: blue; text-decoration: none; }
-        .new-tab-link:hover { text-decoration: underline; }
+        body { font-family: sans-serif; margin: 20px; background-color: #f4f4f4; }
+        .container { max-width: 960px; margin: 20px auto; padding: 20px; background-color: #fff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
+        h1 { text-align: center; color: #333; margin-bottom: 20px; }
+        .user-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .user-card {
+            background-color: #e9ecef;
+            padding: 15px;
+            border-radius: 6px;
+            text-align: center;
+        }
+        .user-card h3 {
+            margin-top: 0;
+            margin-bottom: 5px;
+            color: #333;
+        }
+        .user-card p {
+            margin-bottom: 0;
+            color: #666;
+        }
+        nav { text-align: center; margin-bottom: 20px; }
+        nav a { display: inline-block; margin: 0 10px; color: blue; text-decoration: none; }
+        nav a:hover { text-decoration: underline; }
+        .logout-button { display: block; width: 150px; margin: 20px auto; padding: 10px 15px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer; }
+        .logout-button:hover { background-color: #c82333; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 id="welcomeMessage">Bienvenue, utilisateur !</h1>
-        <p><a href="gestion_utilisateurs.html">Gestion des Utilisateurs</a></p>
-        <p><a href="./inventory/inventory.html">Inventaire</a></p>
-        <p><a href="./trombinoscope/trombinoscope.html">Trombinoscope</a></p>
-        <a href="./messaging/messaging.html" class="new-tab-link" target="_blank">Messagerie Instantanée</a>
-        <button id="logoutButton">Se déconnecter</button>
+        <h1>Bienvenue !</h1>
+        <nav>
+            <a href="#">Accueil</a>
+            <a href="gestion_utilisateurs.html">Gestion des Utilisateurs</a>
+            <a href="./inventory/inventory.html">Inventaire</a>
+            <a href="./trombinoscope/trombinoscope.html">Trombinoscope</a>
+            <a href="./messaging/messaging.html" class="new-tab-link" target="_blank">Messagerie Instantanée</a>
+        </nav>
+
+        <h2>Liste des Utilisateurs</h2>
+        <div class="user-grid" id="userGrid">
+            </div>
+
+        <button id="logoutButton" class="logout-button">Se déconnecter</button>
     </div>
 
     <script>
-        async function displayWelcomeMessage() {
-            const username = localStorage.getItem('username');
-
-            if (username) {
-                try {
-                    const response = await fetch(`/api/users?username=${username}`);
-                    if (response.ok) {
-                        const user = await response.json();
-                        if (user && user.prenom) {
-                            document.getElementById('welcomeMessage').textContent = `Bienvenue, ${user.prenom} !`;
-                        } else {
-                            document.getElementById('welcomeMessage').textContent = `Bienvenue, ${username} !`;
-                        }
-                    } else {
-                        console.error("Erreur lors de la récupération des détails de l'utilisateur");
-                        document.getElementById('welcomeMessage').textContent = `Bienvenue, ${username} !`;
-                    }
-                } catch (error) {
-                    console.error("Erreur lors de la communication avec l'API:", error);
-                    document.getElementById('welcomeMessage').textContent = `Bienvenue !`;
+        async function getUsers() {
+            try {
+                const response = await fetch('/api/users');
+                if (response.ok) {
+                    const users = await response.json();
+                    displayUsers(users);
+                } else {
+                    console.error("Erreur lors de la récupération de la liste des utilisateurs");
+                    document.getElementById('userGrid').innerHTML = '<p>Erreur lors du chargement des utilisateurs.</p>';
                 }
-            } else {
-                window.location.href = 'index.html'; // Rediriger si non connecté
+            } catch (error) {
+                console.error("Erreur de réseau:", error);
+                document.getElementById('userGrid').innerHTML = '<p>Erreur de réseau lors du chargement des utilisateurs.</p>';
             }
         }
 
-        document.addEventListener('DOMContentLoaded', displayWelcomeMessage);
-
-        const logoutButton = document.getElementById('logoutButton');
-        logoutButton.addEventListener('click', logout);
+        function displayUsers(users) {
+            const userGrid = document.getElementById('userGrid');
+            userGrid.innerHTML = '';
+            users.forEach(user => {
+                const userCard = document.createElement('div');
+                userCard.classList.add('user-card');
+                const nameHeading = document.createElement('h3');
+                nameHeading.textContent = user.prenom;
+                userCard.appendChild(nameHeading);
+                userGrid.appendChild(userCard);
+            });
+        }
 
         function logout() {
             localStorage.removeItem('username');
             window.location.href = 'index.html';
         }
+
+        document.addEventListener('DOMContentLoaded', getUsers);
+        const logoutButton = document.getElementById('logoutButton');
+        logoutButton.addEventListener('click', logout);
     </script>
 
 </body></html>
