--- a/page_accueil.html
+++ b/page_accueil.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
-<html lang="fr"><head>
+<html lang="fr">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page d'Accueil</title>
     <style>
         body { font-family: sans-serif; margin: 20px; background-color: #f4f4f4; }
-        .container { max-width: 960px; margin: 20px auto; padding: 20px; background-color: #fff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
-        h1 { text-align: center; color: #333; margin-bottom: 20px; }
-        .user-grid {
+        .container { max-width: 960px; margin: 20px auto; padding: 20px; background-color: #fff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); text-align: center; }
+        h1 { color: #333; margin-bottom: 20px; }
+        .link-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 20px;
             margin-top: 20px;
         }
-        .user-card {
+        .link-box {
             background-color: #e9ecef;
-            padding: 15px;
+            padding: 20px;
             border-radius: 6px;
             text-align: center;
-        }
-        .user-card h3 {
-            margin-top: 0;
-            margin-bottom: 5px;
+            text-decoration: none;
             color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: bold;
+            font-size: 1.1em;
+            transition: background-color 0.3s ease;
         }
-        .user-card p {
-            margin-bottom: 0;
-            color: #666;
+        .link-box:hover {
+            background-color: #d1d1d1;
         }
-        nav { text-align: center; margin-bottom: 20px; }
-        nav a { display: inline-block; margin: 0 10px; color: blue; text-decoration: none; }
-        nav a:hover { text-decoration: underline; }
+        nav { display: none; /* Cacher la navigation en liste */ }
         .logout-button { display: block; width: 150px; margin: 20px auto; padding: 10px 15px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer; }
         .logout-button:hover { background-color: #c82333; }
+        .new-tab-link { /* Style pour le lien de messagerie */
+            background-color: #007bff;
+            color: white;
+            padding: 20px;
+            border-radius: 6px;
+            text-align: center;
+            text-decoration: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: bold;
+            font-size: 1.1em;
+            transition: background-color 0.3s ease;
+            margin: 20px auto; /* Centrer la boîte de messagerie */
+            max-width: 200px; /* Limiter la largeur si nécessaire */
+        }
+        .new-tab-link:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -46,51 +66,37 @@
             <a href="./messaging/messaging.html" class="new-tab-link" target="_blank">Messagerie Instantanée</a>
         </nav>
 
-        <h2>Liste des Utilisateurs</h2>
-        <div class="user-grid" id="userGrid">
+        <div class="link-grid">
+            <a href="gestion_utilisateurs.html" class="link-box">Gestion des Utilisateurs</a>
+            <a href="./inventory/inventory.html" class="link-box">Inventaire</a>
+            <a href="./trombinoscope/trombinoscope.html" class="link-box">Trombinoscope</a>
             </div>
+
+        <a href="./messaging/messaging.html" class="new-tab-link" target="_blank">Messagerie Instantanée</a>
 
         <button id="logoutButton" class="logout-button">Se déconnecter</button>
     </div>
 
     <script>
-        async function getUsers() {
-            try {
-                const response = await fetch('/api/users');
-                if (response.ok) {
-                    const users = await response.json();
-                    displayUsers(users);
-                } else {
-                    console.error("Erreur lors de la récupération de la liste des utilisateurs");
-                    document.getElementById('userGrid').innerHTML = '<p>Erreur lors du chargement des utilisateurs.</p>';
-                }
-            } catch (error) {
-                console.error("Erreur de réseau:", error);
-                document.getElementById('userGrid').innerHTML = '<p>Erreur de réseau lors du chargement des utilisateurs.</p>';
-            }
-        }
+        // La fonction getUsers et displayUsers ont été supprimées car nous n'affichons plus la liste des utilisateurs.
 
-        function displayUsers(users) {
-            const userGrid = document.getElementById('userGrid');
-            userGrid.innerHTML = '';
-            users.forEach(user => {
-                const userCard = document.createElement('div');
-                userCard.classList.add('user-card');
-                const nameHeading = document.createElement('h3');
-                nameHeading.textContent = user.prenom;
-                userCard.appendChild(nameHeading);
-                userGrid.appendChild(userCard);
-            });
-        }
+        document.addEventListener('DOMContentLoaded', () => {
+            const username = localStorage.getItem('username');
+            const welcomeMessageElement = document.querySelector('h1');
+            if (username) {
+                welcomeMessageElement.textContent = `Bienvenue !`; // Message de bienvenue générique
+            } else {
+                welcomeMessageElement.textContent = `Bienvenue ! Veuillez vous connecter.`; // Message si non connecté
+            }
+        });
+
+        const logoutButton = document.getElementById('logoutButton');
+        logoutButton.addEventListener('click', logout);
 
         function logout() {
             localStorage.removeItem('username');
             window.location.href = 'index.html';
         }
-
-        document.addEventListener('DOMContentLoaded', getUsers);
-        const logoutButton = document.getElementById('logoutButton');
-        logoutButton.addEventListener('click', logout);
     </script>
 
 </body></html>
