changmnt page_accueil.html

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -27,6 +27,7 @@
             font-weight: bold;
             font-size: 1.1em;
             transition: background-color 0.3s ease;
+            border: 1px solid black;
         }
         .link-box:hover {
             background-color: #d1d1d1;
