--- a/page_accueil.html
+++ b/page_accueil.html
@@ -32,8 +32,8 @@
         .link-box:hover {
             background-color: #d1d1d1;
         }
-        .logout-button { display: block; width: 150px; margin: 20px auto; padding: 10px 15px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer; }
-        .logout-button:hover { background-color: #c82333; }
+        .logout-button { display: block; width: 150px; margin: 20px auto; padding: 10px 15px; background-color: #ff0000; color: white; border: none; border-radius: 5px; cursor: pointer; }
+        .logout-button:hover { background-color: #ff2a2a; }
         nav { display: none; } /* Cacher la navigation en liste */
     </style>
 </head>
